--- a/vueApp/src/app/application/calculator/calculator.component.css
+++ b/vueApp/src/app/application/calculator/calculator.component.css
@@ -48,7 +48,7 @@
     background-image: linear-gradient(To right, hsla(250, 69%, 65%, 0.675),
      hsla(250, 69%, 65%, 0.575),
      hsla(265, 78%, 77%, 0.685)),
-      url(C:/Users/ilyes/zakat-application/vueApp/src/assets/mosque_illustration_for_dribble-01_4x.webp);
+      url(C:/Users/ilyes/\Desktop/zakat-application/vueApp/src/assets/mosque_illustration_for_dribble-01_4x.webp);
       background-position: center;
     box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 15px;
     border-radius: 15px;
