--- a/vueApp/src/app/application/calculator/calculator.component.html
+++ b/vueApp/src/app/application/calculator/calculator.component.html
@@ -108,8 +108,14 @@
         </div>
     </div>
 
-
-
+    <div>
+        <h2>Current Metal Prices</h2>
+        <ul>
+          <li *ngFor="let metal of currentMetalPrices.metals | keyvalue">
+            {{ metal.key }}: {{ metal.value }}
+          </li>
+        </ul>
+      </div>
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
